try to fix up ifram overflow

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -34,6 +34,10 @@ h6 {
     padding-top: 20px;
 }
 
+.container > iframe {
+  max-width: 100%;
+}
+
 .navbar-brand > img {
   height: 100%;
 }
